--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "files.associations": {
-    "atomic": "cpp"
+    "atomic": "cpp",
+    "cstddef": "c",
+    "initializer_list": "c",
+    "type_traits": "c",
+    "xutility": "c"
   }
 }
